--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,27 @@
     <string name="app_name">SecretChat</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Chat List Name -->
+    <string name="name_1">Harry Potter</string>
+    <string name="name_2">Handsome Potter</string>
+    <string name="name_3">Happy Potter</string>
+    <string name="name_4">Hello Potter</string>
+
+    <!-- Chat List Message -->
+    <string name="msg_1">Hi Potter</string>
+    <string name="msg_2">Hello Potter</string>
+    <string name="msg_3">Bye Potter</string>
+    <string name="msg_4">Sorry Potter</string>
+
+    <!-- Chat List Date -->
+    <string name="date_1">3h</string>
+    <string name="date_2">Tue</string>
+    <string name="date_3">Mon</string>
+    <string name="date_4">Sun</string>
+    <string name="sender_message">Sender Message</string>
+    <string name="msg_time">14:30</string>
+    <string name="receiver_message">Receiver Message</string>
+
+
 </resources>
