--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">SecretChat</string>
     <string name="self_key_pair_name">self_key</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="preference_name">secretChatPreference</string>
+    <string name="self_id_preference_key">selfId</string>
 
     <!-- Chat List Name -->
     <string name="name_1">Harry Potter</string>
