Implement send image
Implement send image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="preference_name">secretChatPreference</string>
     <string name="self_id_preference_key">selfId</string>
     <string name="message_service_cmd_key">messageServiceCommand</string>
+    <string name="cloud_storage_root_folder_name">UploadedFiles</string>
 
     <!-- Chat List Name -->
     <string name="name_1">Harry Potter</string>
