--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="self_id_preference_key">selfId</string>
     <string name="message_service_cmd_key">messageServiceCommand</string>
     <string name="cloud_storage_root_folder_name">UploadedFiles</string>
+    <string name="media_storage_root">media</string>
 
     <!-- Chat List Name -->
     <string name="name_1">Harry Potter</string>
