Implement capturing video to send

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <!-- Attachment Menu -->
     <string name="photo">Photos</string>
     <string name="video">Videos</string>
+    <string name="camera">Camera</string>
     <string name="location">Location</string>
 
 
