--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="weather_service_url">https://api.openweathermap.org/data/2.5/weather</string>
+    <string name="weather_service_api_key">b65b8fa561ad124ec8ef76f7514baac3</string>
     <string name="app_name">SecretChat</string>
     <string name="self_key_pair_name">self_key</string>
     <string name="preference_name">secretChatPreference</string>
