--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="message_service_cmd_key">messageServiceCommand</string>
     <string name="cloud_storage_root_folder_name">UploadedFiles</string>
     <string name="media_storage_root">media</string>
+    <string name="profile_picture_folder_path">ProfilePictures</string>
 
     <!-- Chat List Name -->
     <string name="name_1">Harry Potter</string>
